--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Your Name - Data Science Portfolio"
+  title: "Cameron Hamilton - Data Science Portfolio"
   description: "A showcase of my data science projects and learning journey"
   
   navbar:
@@ -24,6 +24,8 @@ website:
             href: projects/data-acquisition.qmd
           - text: "Final Project"
             href: projects/final-project.qmd
+          - text: "tutorial"
+            href: tutorial.qmd
     right:
       - icon: github
         href: https://github.com/your-username
